# baseenv

./: INSTALL  Makefile.doc  Makefile.in  Makefile.vec  NOTES  README  aclocal.m4  baseenv.h.in  baseenvgit.h  configure  configure.ac  githash
TSVC/: Makefile.in  README  aclocal.m4  autogen.sh  ax_compiler_vendor.m4  configure  configure.ac  mergeresults  mergesheets  tsc.c  tsc.h  tscdef.h.in
confdb/: aclocal_fc.m4  aclocal_mpi.m4
gpuvec/: Makefile.acc  Makefile.in  README  dummy.c  gpuvec.c  gpuvec.h  runtests  runtests.bw  runtests.sbatch
haloperf/: Makefile.in  README  aclocal.m4  configure  configure.ac  halocompare.c  halocompare.h  haloperf.h.in  irecv.c  irecv.h  ndummy.c  nodecomm.c  packfunc.c  packfunc.h  packtest.c  persist.c  persist.h  phased.c  phased.h  waitall.c  waitall.h
io/: Makefile.in  faststream.c  faststream.h  orderwrite.c
io/tests/: Makefile.in  checkposix.c  faststdebug.c  ioda.c  iodar.c  ireadtest.c  ireadtest2.c  owritetest.c  streamex.c
libtopodisc/: .gitignore  Makefile.am  configure.ac  findcliques.c  findcliques.h  meshmap2d.c
man/man1/: mpit_vars.1  spmv-c.1  stencil.1
man/man3/: BENV_GetSizes.3  MPE_CreateConseqComm.3  MPE_CreateRoundRobinComm.3  MPE_CreateSMPComm.3  MPE_FindCliqueFromName.3  MPE_FindCliqueFromNodename.3  MPIX_Comm_dims_create.3  MPIX_GetSocketAndCore.3  MPIX_NodeSubset.3  MPIX_Nodecart_coords.3  MPIX_Nodecart_create.3  MPIX_Nodecart_get.3  MPIX_Nodecart_map.3  MPIX_Nodecart_shift.3  MPIX_Nodecart_sub.3  MPIX_Nodecartdim_get.3  MPIX_Nodecomm_create.3  MPUTIL_ABORT.3  MPUTIL_BEGIN.3  MPUTIL_CURSIZE.3  MPUTIL_END.3  MPUTIL_FINALIZE.3  MPUTIL_INIT.3  MPUTIL_LABEL.3  MPUTIL_MASTER_BEGIN.3  MPUTIL_MASTER_END.3  MPUTIL_MYRANK.3  MPUTIL_NUMPROCESSES.3  MPUTIL_OUTAPP.3  MPUTIL_SETDEBUG.3  MPUTIL_SYNC.3  TextFileReadClose.3  TextFileReadDebug.3  TextFileReadFree.3  TextFileReadGetStats.3  TextFileReadIterate.3  TextFileReadOpen.3  TextFileReadPrintStats.3  TextFileWriteClose.3  TextFileWriteFlush.3  (+30 more)
mpi-patterns/: Makefile.in  README  dtypes.c  stencil.c  stencil.h  stencil_bnb.c  stencil_ddt.c  stencil_ddt_ov.c  stencil_ddt_rma.c  stencil_nb.c  stencil_neighcolls.c  stencil_neighcolls_ov.c  stencil_pnb.c  stencil_rma.c  stencil_shmem_nb.c  stencil_util.c  vecperf.c
mpi-patterns/stencil3/: Makefile.in  README  stencil.c  stencil.h  stencil_bnb.c  stencil_nb.c  stencil_util.c
mpit/: Makefile.in  mpit_vars.c
mputil/: Makefile.in  dummy.c  mpex.c  mputil.c  mputil.h
nodecart/: Makefile.in  README  ncartshim.c  ncartshim.h  ncartshimf.c  nodecart.c  nodecart.h  nodecartf.c  nodesockets.c
nodecart/tests/: Makefile.in  README  hdecomp.c  layout.c  ncartperf.c  ncarttest.c  shimtest.c  shimtestf.f90
nodeperf/: Makefile.in  fma.c  mysecond.c  spmv.c  spmv.f  stencil.c  stream.f
perftest/: Makefile.in  README  blksweep.f90  blksweepd.f90  buflimit.c  configure  configure.ac  daytime.c  getopts.c  getopts.h  gopf.c  goptest.c  grph.c  halo.c  mpptest.c  mpptest.h  mpptest.hlp  mpptestconf.h.in  mspmv.c  mspmvd.c  mstream.c  mstreamd.c  ovlap.c  pair.c  pattern.c  stress.c
seq/: Makefile.in  seq.c  seq.h  seqex.c
topo/: Makefile.in  README  configure  configure.ac  findcliques.c  findcliques.h  meshtopo.c  nodegetaff.inc  nodegetcpu.inc  nodehwloc.inc  nodempiname.inc  nodempisplit.inc  topobgq.inc  topoconf.h.in  topocray.inc  topodebug.c  topodist.c  topoimpl.h  topoinfo.c  topoinfo.h  topompiname.inc  topompisplit.inc  topotest.c
util/: Makefile.in  benvutil.h  getsizes.c
www/: baseenv.cit  index.html
www/www1/: index.htm  mpit_vars.htm  spmv-c.htm  stencil.htm
www/www3/: BENV_GetSizes.htm  MPE_CreateConseqComm.htm  MPE_CreateRoundRobinComm.htm  MPE_CreateSMPComm.htm  MPE_FindCliqueFromName.htm  MPE_FindCliqueFromNodename.htm  MPIX_Comm_dims_create.htm  MPIX_GetSocketAndCore.htm  MPIX_NodeSubset.htm  MPIX_Nodecart_coords.htm  MPIX_Nodecart_create.htm  MPIX_Nodecart_get.htm  MPIX_Nodecart_map.htm  MPIX_Nodecart_shift.htm  MPIX_Nodecart_sub.htm  MPIX_Nodecartdim_get.htm  MPIX_Nodecomm_create.htm  MPUTIL_ABORT.htm  MPUTIL_BEGIN.htm  MPUTIL_CURSIZE.htm  MPUTIL_END.htm  MPUTIL_FINALIZE.htm  MPUTIL_INIT.htm  MPUTIL_LABEL.htm  MPUTIL_MASTER_BEGIN.htm  MPUTIL_MASTER_END.htm  MPUTIL_MYRANK.htm  MPUTIL_NUMPROCESSES.htm  MPUTIL_OUTAPP.htm  MPUTIL_SETDEBUG.htm  MPUTIL_SYNC.htm  TextFileReadClose.htm  TextFileReadDebug.htm  TextFileReadFree.htm  TextFileReadGetStats.htm  TextFileReadIterate.htm  TextFileReadOpen.htm  TextFileReadPrintStats.htm  TextFileWriteClose.htm  TextFileWriteFlush.htm  (+31 more)
